docs(classfile): enhance with research from OpenJDK PRs and mailing lists
Enhanced Class File API documentation with deep research:

- Added implementation.md (507 lines): architecture, source code structure,
  performance optimization details, ASM migration guide
- Enhanced index.md: contributor profiles (Adam Sotona), PR/bug tracking,
  mailing list excerpts, internal implementation details
- Enhanced timeline.md: JDK 21-26 evolution, JDK-8294982 PR details,
  RFR discussions, JMH benchmark results

Key contributors:
- Adam Sotona (Principal Java Engineer, Oracle): JEP Owner, 56+ versions
- Brian Goetz: JEP Author, API design guidance

Resources:
- PR #10982: Implementation of Classfile API
- JDK-8294982: Classfile API Implementation
- JDK-8308753: Transition to Preview
- JDK-8334714: JEP 484 Implementation
- mail.openjdk.org compiler-dev discussions

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>